--- a/config.json
+++ b/config.json
@@ -1,5 +1,17 @@
 {
-    "modules": [],
+    "modules": [
+        "main_navigation",
+        "login",
+        "dashboard",
+        "product_list",
+        "product_detatail",
+        "cart",
+        "order",
+        "profile",
+        "category_list"
+    ],
+    "clean_architecture": false,
+    "services": [],
     "module_directory_name": "module",
     "experimental_mode": false,
     "learning_mode": false,
