--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,19 @@ dependencies:
   uuid: ^4.0.0
   cached_network_image: ^3.3.1
   permission_handler: ^11.2.0
-  geolocator: ^11.0.0
-  flutter_map: ^6.1.0
-  carousel_slider: ^4.1.1
+  geolocator: ^13.0.2
+  flutter_map: ^7.0.2
+  carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
   url_launcher: ^6.1.6
-  blur: ^3.1.0
+  blur: ^4.0.0
   flutter_svg: ^2.0.5
   custom_clippers: ^2.0.0
   badges: ^3.1.1
-  flutter_markdown: ^0.6.12
+  flutter_markdown: ^0.7.4+2
   dotted_border: ^2.0.0+3
   faker_dart: ^0.2.1
-  syncfusion_flutter_charts: ^25.1.35
+  syncfusion_flutter_charts: ^27.2.3
   qr_flutter: ^4.0.0
   path_provider: ^2.0.11
   flutter_animate: ^4.1.1+1
@@ -38,17 +38,17 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_inappwebview: ^6.0.0
   shared_preferences: ^2.2.1
-  screenshot: ^2.1.0
-  syncfusion_flutter_calendar: ^25.1.35
+  screenshot: ^3.0.0
+  syncfusion_flutter_calendar: ^27.2.3
   google_maps_flutter: ^2.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   freezed: ^2.4.2
   json_serializable: ^6.7.1
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.1
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
